welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:3: error: value unary_! is not a member of Unit
  while (!estPosFinale()) {
         ^ColumnByColumn:13: warning: enclosing method estPosFinale has result type Unit: return value discarded
  return (getX() == getMondeLargeur()-1 && getY() == getMondeHauteur()-1)
  ^