welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
override def run() {
  var posX:Int = 0
  var posY:Int = 0
  while (!estPosFinale()) {
    setPos(posX, posY)
    if (getY() == getMondeHauteur()-1) {
      posX += 1
      posY = 0
    }
  }
}

def estPosFinale():Boolean {
  return (getX() == getMondeLargeur()-1 && getY() == getMondeHauteur()-1)
}